show names in relations

--- a/assets/views/entity.mustache
+++ b/assets/views/entity.mustache
@@ -25,7 +25,7 @@
 		<h2>Verknüpfungen</h2>
 		<ul>
 			{{#relations}}
-			<li><a href="/entity/{{.}}">{{.}}</a></li>
+			<li><a href="/entity/{{entity._id}}">{{entity.name}}</a></li>
 			{{/relations}}
 		</ul>
 	{{/entity}}
