first rewrite of styles for landingpage

--- a/assets/views/header.mustache
+++ b/assets/views/header.mustache
@@ -8,14 +8,15 @@
 	<link href="/assets/fonts/roboto-slab/roboto-slab.css" rel="stylesheet" type="text/css">
 	
 	<!-- css -->
-	<link href="/assets/css/bootstrap.min.css" rel="stylesheet" type="text/css">
-	<link href="/assets/css/bootstrap-theme.min.css" rel="stylesheet" type="text/css">
+	<link href="/assets/css/bootstrap.css" rel="stylesheet" type="text/css">
+	
 	<link href="/assets/css/font-awesome.min.css" rel="stylesheet" type="text/css">
-	<link href="/assets/css/lobbyradar.css" rel="stylesheet" type="text/css">
-
+<!-- 	<link href="/assets/css/lobbyradar.css" rel="stylesheet" type="text/css">
+ -->
 	<!-- js -->
 	<script type="text/javascript" src="/assets/js/jquery.min.js"></script>
 	<script type="text/javascript" src="/assets/js/bootstrap.min.js"></script>
+	<script type="text/javascript" src="/assets/js/jquery-ui.min.js"></script>
 	<script type="text/javascript" src="/assets/js/lobbyradar.js"></script>
 
 	<!-- viewport -->
