--- a/assets/views/navigation.mustache
+++ b/assets/views/navigation.mustache
@@ -1,38 +1,28 @@
-<div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-	<div class="container-fluid">
-		<div class="navbar-header">
-			<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target=".navbar-collapse">
-				<span class="sr-only">Navigation einblenden</span>
-				<span class="icon-bar"></span>
-				<span class="icon-bar"></span>
-				<span class="icon-bar"></span>
-			</button>
-			<a class="navbar-brand" href="/">
-				<img src="/assets/images/lobbyradar.png">
-				Lobbyradar
-			</a>
-		</div>
-		<div class="navbar-collapse collapse">
-			<ul class="nav navbar-nav">
-				<li{{#nav_all}} class="active"{{/nav_all}}><a href="/list/all">Alles</a></li>
-				<li{{#nav_person}} class="active"{{/nav_person}}><a href="/list/person">Personen</a></li>
-				<li{{#nav_entity}} class="active"{{/nav_entity}}><a href="/list/entity">Organisationen</a></li>
-			</ul>
-			<!--
-			<ul class="nav navbar-nav">
-				<li class="active"><a href="/adm">Berichte</a></li>
-			</ul>
-			<ul class="nav navbar-nav navbar-right">
-				<li><a href="/admin/">Anmelden</a></li>
-				<li><a href="/doc/">API</a></li>
-			</ul>
-			-->
-			<form method="post" action="/search" class="navbar-form navbar-right" role="search">
-				<div class="form-group">
-					<input type="text" class="form-control" placeholder="Suchen">
-				</div>
-				<button type="submit" class="btn btn-default">Suchen</button>
-			</form>
-		</div>
-	</div>
+<div class="zdf-header-grey">
+      <div class="container">
+      <div class="col-md-3">
+        <img class="zdf-logo" src="assets/images/ZDF-logo-45x26.svg" onerror="this.src='assets/images/ZDF-logo-45x26.png';this.onerror=null;" alt="ZDF" width="45" height="26">
+      </div>
+      </div>
+    </div>
+      <div class="zdf-header-blue">
+        <div class="container">
+          <div class="col-md-3">
+
+            <a class="navbar-brand" href="#">    
+              <span class="fa-stack fa-lg">
+                <i class="fa fa-bullseye fa-5x"></i>
+                <i class="fa fa-suitcase fa-stack-1x symbol"></i>
+              </span>             
+              <div class="logo-name">
+                Lobby<strong>radar</strong>
+              </div>
+            </a>
+
+          </div>
+          <div class="col-md-3 hidden-sm hidden-xs col-md-push-6">
+            
+             <button class="btn-ext btn btn-lg btn-primary" data-toggle="modal" data-target="#myModal">Installier dir den Durchblick!</button>
+          </div><!--/.navbar-collapse -->
+        </div>
 </div>
